# ==============================================================================
# AstraDB Source Tree
# ==============================================================================

# Add subdirectories
add_subdirectory(base)
add_subdirectory(core)
add_subdirectory(container)
add_subdirectory(protocol)
add_subdirectory(network)
add_subdirectory(commands)
add_subdirectory(server)
add_subdirectory(persistence)
add_subdirectory(cluster)